--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,15 @@
 <!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<div class="card">
+    <h2>Contact</h2>
+    <p>Lorem Ipsum</p>
+    <div class="card-body">
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Your Mail</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+    </div>
+  </div
