--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,13 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<div class="row">
+  <div class="col-8">
+    <h2>The first Heading will Catch you Eye</h2>
+    <p>
+      Lorem Ipsum
+    </p>
+  </div>
+
+  <div class="col-lg-4">
+    <img src="assets/img/1.jpg" class="rounded-circle" alt="...">
+  </div>
+</div>
