--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,13 @@
 <!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<div class="row">
+    <div class="col-8">
+    <h2>The second Heading is pretty cool too</h2>
+    <p>
+        Lorem Ipsum
+    </p>
+  </div>
+  <div class="row">
+    <div class="col-lg-4">
+        <img src="assets/img/2.jpg" class="rounded-circle" alt="...">
+
+  </div>
