--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,26 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
+  </head>
+  <body>
+    <div class="card text-bg-dark">
+        <img src="assets/img/bg.jpg" class="card-img" alt="...">
+        <div class="card-img-overlay">
+          <h1 class="card-title" style="background-color: lightgray;"><h1>One page wonder</h1>
+        </br>
+        </br>
+          <p class="card-text"><h3>Will knock yor sockets Off</h3>
+        </div>
+      </div>
+
+        
+  </body>
+</html>
+
+
+
