--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -7,7 +7,11 @@
     </p>
   </div>
 
-  <div class="col-lg-4">
-    <img src="assets/img/1.jpg" class="rounded-circle" alt="...">
+  <div class="col-4">
+    <figure class="figure">
+      <img src="assets/img/1.jpg" class="figure-img img-fluid rounded-circle" alt="...">
+      <figcaption class="figure-caption"></figcaption>
+    </figure>
+    
   </div>
 </div>
