--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,32 @@
 <!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<html>
+
+<body>
+    <h3>Porfolio</h3>
+    <div class=""> 
+        <p>Lorem ipsum </p>
+    </div>
+    
+    <div class="container text-center"> <!-- hacer con card alt+shift+a -->
+        <div class="row">
+            <div class="col-4">
+                <img src="assets/img/big-project-image.png">
+                <h4 style="color:blue">Project</h4>
+                <p>Lorem Ipsum</p>
+            </div>
+            <div class="col-4">
+                <img src="assets/img/big-project-image.png">
+                <h4 style="color:blue">Project</h4>
+                <p>Lorem Ipsum</p>
+            </div>
+            <div class="col-4">
+                <img src="assets/img/big-project-image.png">
+                <h4 style="color:blue">Project</h4>
+                <p>Lorem Ipsum</p>
+            </div>
+        </div>
+    </div>
+</body>
+
+
+</html>
