--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,26 +1,20 @@
-<!-- your html code here -->
-<!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
-  </head>
-  <body>
-    <div class="card text-bg-dark">
-        <img src="assets/img/bg.jpg" class="card-img" alt="...">
-        <div class="card-img-overlay">
-          <h1 class="card-title" style="background-color: lightgray;"><h1>One page wonder</h1>
-        </br>
-        </br>
-          <p class="card-text"><h3>Will knock yor sockets Off</h3>
-        </div>
+<div class="container-fluid">
+  <div class="row position-relative">
+    <div class="position-absolute top-50 start-50 translate-middle text-center bg-light text-dark fs-1">
+    
+      <div>
+        <h1>One Page Wonder</h1>
+      </div>
+      <div>
+        <p>Will knock your socks off</p>
       </div>
 
-        
-  </body>
-</html>
+    </div>
+    <div>
+      <img src="assets/img/bg.jpg" class="mw-100" alt="...">
 
 
+    </div>
 
+  </div>
+</div>
