--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -2,30 +2,46 @@
 <html>
 
 <body>
-    <h3>Porfolio</h3>
-    <div class=""> 
-        <p>Lorem ipsum </p>
+  <h3>Porfolio</h3>
+  <div class="">
+    <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+      aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo
+      enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
+      ratione voluptatem sequi nesciunt.</p>
+  </div>
+
+  <div class="card-group">
+    <div class="card">
+      <img src="assets/img/big-project-image.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Project Name</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.</p>
+
+      </div>
     </div>
-    
-    <div class="container text-center"> <!-- hacer con card alt+shift+a -->
-        <div class="row">
-            <div class="col-4">
-                <img src="assets/img/big-project-image.png">
-                <h4 style="color:blue">Project</h4>
-                <p>Lorem Ipsum</p>
-            </div>
-            <div class="col-4">
-                <img src="assets/img/big-project-image.png">
-                <h4 style="color:blue">Project</h4>
-                <p>Lorem Ipsum</p>
-            </div>
-            <div class="col-4">
-                <img src="assets/img/big-project-image.png">
-                <h4 style="color:blue">Project</h4>
-                <p>Lorem Ipsum</p>
-            </div>
-        </div>
+    <div class="card">
+      <img src="assets/img/big-project-image.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Project Name</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+
+      </div>
     </div>
+    <div class="card">
+      <img src="assets/img/big-project-image.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Project Name</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+          This card has even longer content than the first to show that equal height action.</p>
+
+      </div>
+    </div>
+  </div>
+
+
+
+
 </body>
 
 
