--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="row position-relative">
+  <div class="row">
     <div class="position-absolute top-50 start-50 translate-middle text-center bg-light text-dark fs-1">
     
       <div>
