--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,7 +1,7 @@
 <!-- your html code here -->
 <div class="row">
   <div class="col-8">
-    <h2>The first Heading will Catch you Eye</h2>
+    <h2>The first Heading <span style="color: grey;">will catch your Eye</span></h2>
     <p>
       "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
       aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo
