--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,7 +1,8 @@
 <!-- your html code here -->
 <div class="row">
   <div class="col-8">
-    <h2>The second Heading is pretty cool too</h2>
+    <h2>The second Heading <span style="color: grey;">is pretty cool too</span></h2>
+    
     <p>
       "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
       aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo
@@ -14,6 +15,6 @@
 
     <div class="col-4">
       <figure class="figure">
-        <img src="assets/img/2.jpg" class="figure-img img-fluid rounded-circle" alt="...">
+        <img src="assets/img/2.jpg" class= "figure-img img-fluid rounded-circle" alt="...">
         <figcaption class="figure-caption"></figcaption>
       </figure>
