--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,18 +1,26 @@
-<!-- your html code here -->
 <div class="card">
   <h2>Contact</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-  <div class="card-body">
-    <div class="mb-3">
-      <label for="exampleFormControlInput1" class="form-label">Your Mail</label>
-      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-    </div>
-    <div class="mb-3">
-      <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+  
+  <div class="card mt-3 w-50 mx-auto bg-light"> 
+    <div class="card-body">
+      <!-- Formulario centrado -->
+      <div class="d-flex flex-column align-items-center">
+        <div class="mb-3 w-75"> 
+          <label for="exampleFormControlInput1" class="form-label">Your Mail</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="mb-3 w-75"> 
+          <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+      </div>
+      
+      <div class="d-flex justify-content-end align-items-end mt-2">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
     </div>
   </div>
-</div
+</div>
