--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,22 +1,19 @@
-<!-- your html code here -->
-<div class="row">
-  <div class="col-8">
+<div class="row align-items-center"> <!-- Añadido align-items-center -->
+
+  <div class="col-8 d-flex flex-column justify-content-center"> <!-- Añadido d-flex, flex-column y justify-content-center -->
     <h2>The first Heading <span style="color: grey;">will catch your Eye</span></h2>
     <p>
       "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
       aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo
       enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
-      ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
-      adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
-      voluptatem.
+      ratione voluptatem sequi nesciunt.
     </p>
   </div>
 
-  <div class="col-4">
-    <figure class="figure">
-      <img src="assets/img/1.jpg" class="figure-img img-fluid rounded-circle" alt="...">
+  <div class="col-4 d-flex justify-content-center align-items-center"> <!-- Añadido d-flex, justify-content-center y align-items-center -->
+    <figure class="figure m-3"> <!-- Añadido m-3 para agregar márgenes -->
+      <img src="assets/img/1.jpg" style="width: 70%;" class="figure-img img-fluid rounded-circle" alt="...">
       <figcaption class="figure-caption"></figcaption>
     </figure>
-    
   </div>
 </div>
