--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,5 +1,5 @@
 <!-- your html code here -->
-<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+<nav class="container-fluid navbar navbar-expand-lg navbar navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#" style="color: gray;">Start Bootstrap</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
