--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,5 +1,14 @@
 <!-- your html code here -->
-<div class="row">
+<div class="row align-items-center"> <!-- Añadido align-items-center para centrar verticalmente -->
+
+  <!-- Mover la columna de la imagen a la primera posición para que quede a la izquierda -->
+  <div class="col-4 d-flex align-items-center justify-content-center"> <!-- Añadido d-flex, align-items-center y justify-content-center para centrar la imagen -->
+    <figure class="figure">
+      <img src="assets/img/2.jpg" class="figure-img img-fluid rounded-circle" alt="...">
+      <figcaption class="figure-caption"></figcaption>
+    </figure>
+  </div>
+  
   <div class="col-8">
     <h2>The second Heading <span style="color: grey;">is pretty cool too</span></h2>
     
@@ -7,14 +16,7 @@
       "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
       aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo
       enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
-      ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
-      adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
-      voluptatem.
+      ratione voluptatem sequi nesciunt.
     </p>
-
-
-    <div class="col-4">
-      <figure class="figure">
-        <img src="assets/img/2.jpg" class= "figure-img img-fluid rounded-circle" alt="...">
-        <figcaption class="figure-caption"></figcaption>
-      </figure>
+  </div>
+</div>
