--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -3,17 +3,15 @@
     <div class="position-absolute top-50 start-50 translate-middle text-center bg-light text-dark fs-1">
     
       <div>
-        <h1>One Page Wonder</h1>
+        <h1 class="mb-3 fs-1">One Page Wonder</h1>
       </div>
       <div>
-        <p>Will knock your socks off</p>
+        <p class="fs-5">Will knock your socks off</p>
       </div>
 
     </div>
     <div>
       <img src="assets/img/bg.jpg" class="mw-100" alt="...">
-
-
     </div>
 
   </div>
